--- a/test1/src/components/UI/Card.module.css
+++ b/test1/src/components/UI/Card.module.css
@@ -1,5 +1,4 @@
 .card{
-    background-color: #d1c6be;
     border: 1px solid transparent;
-    border-radius: 10px;
+    background-color: white;
 }
