--- a/test1/src/components/products/ProductList.module.css
+++ b/test1/src/components/products/ProductList.module.css
@@ -35,7 +35,7 @@
 }
 .productCard button{
     float: right;
-    margin-bottom: 0;
+    margin-bottom: 0.3rem;
 }
 .productCard section{
     height: 5rem;
