handling products using redux

--- a/test1/src/components/WelcomePage/Welcome.module.css
+++ b/test1/src/components/WelcomePage/Welcome.module.css
@@ -1,5 +1,5 @@
 .main {
-  background-image: url("../images/tamanna-rumee-eD1RNYzzUxc-unsplash.jpg");
+  background-image: url("../../images/backgroundImage.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
