cart and place order page

--- a/test1/src/components/Auth/Auth.module.css
+++ b/test1/src/components/Auth/Auth.module.css
@@ -19,7 +19,7 @@ hr{
   display: block;
   text-align: left;
 }
-.auth input , textarea{
+.auth input ,.auth textarea{
   font: inherit;
   color: gray;
   border-radius: 4px;
