--- a/test1/src/App.css
+++ b/test1/src/App.css
@@ -28,7 +28,8 @@ button:hover {
   background-color: gray;
 }
 button:disabled{
-  color: white;
+  opacity: 0.6;
+  color: black;
   background-color: lightgray;
   cursor: not-allowed;
 }
