--- a/test1/src/components/WelcomePage/Welcome.module.css
+++ b/test1/src/components/WelcomePage/Welcome.module.css
@@ -1,24 +1,38 @@
-.main {
-  background-image: url("../../images/backgroundImage.jpg");
+main {
+  overflow: hidden;
+  background-image: url("../../images/Background-website-01.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+}
+.outerdiv {
+  overflow: hidden;
   position: relative;
   width: 100%;
   height: 50rem;
 }
 .content {
+  font-family: "Times New Roman", Times, serif;
   position: absolute;
-  color: white;
-  left: 45rem;
-  bottom: 7rem;
+  color: black;
+  left: 15rem;
+  top: 7rem;
 }
-.main h2 {
+.content h2 {
   margin: 0 0 2rem 0;
   font-size: 4rem;
 }
-.main button {
+.content button {
   background-color: white;
-  color: gray;
+  border : 2px solid black ; 
+  font-size: large;
+  color: black;
   border-radius: 16px;
   float: right;
 }
+
+.content button:hover {
+  background-color: black;
+  color: white;
+ 
+}
+
