--- a/test1/src/components/cart/Cart.module.css
+++ b/test1/src/components/cart/Cart.module.css
@@ -1,6 +1,13 @@
 .wrapper{
-    margin: 2rem 4rem;
+    margin: 2rem 8rem;
     text-align: center;
+}
+.actions{
+    margin-top:2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 .cartItem{
     display: flex;
@@ -8,7 +15,19 @@
     align-items: center;
     justify-content: space-between;
     padding: 1rem 2rem;
+    margin : 1rem 0 ; 
+    box-shadow: 0 5px 25px -5px #ccc;
 }
-.cartItem > header{
+.cartItem > section{
     text-align: left;
+}
+.cartItem button{
+    margin: 0.2rem;
+}
+.headerContent{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: bold;
 }
