--- a/test1/src/components/layout/Header.module.css
+++ b/test1/src/components/layout/Header.module.css
@@ -9,6 +9,7 @@
   color: white;
   overflow: hidden;
   position:sticky;
+  z-index: 1;
   top: 0;
 }
 .header h1 {
@@ -37,10 +38,13 @@
   color: red;
   text-decoration: none;
 }
-/* .wrapper{
-  position: fixed; 
-  top : 0 ; 
-  width: 100%;
-  overflow:hidden;
-  max-height: 100%;
-} */
+.header h1:hover{
+  color:white
+}
+.header button{
+  padding: 0;
+}
+.header button:hover{
+  background-color: #302e2e;
+  color: red;
+}
