--- a/test1/src/components/product/AllProducts.module.css
+++ b/test1/src/components/product/AllProducts.module.css
@@ -15,18 +15,17 @@
 .searchBar input:focus {
   outline: none;
 }
-.loading {
-  margin: 2rem 0;
-  height: 100rem;
+.loading{
+  width : 100%
 }
 .main-container {
-  margin: 2rem auto;
+  margin: 1.5rem auto;
   padding: 2rem;
-  width: 80%;
+  width: 70%;
   background-color: aliceblue;
   display: grid;
   grid-template-columns: repeat(4, 23.56%);
-  gap: 1.7rem;
-  overflow: hidden;
+  gap: 1.5rem;
+  overflow: visible;
   box-shadow: 0 10px 50px -5px #c2d3e2;
 }
