--- a/test1/src/components/Profile/Profile.module.css
+++ b/test1/src/components/Profile/Profile.module.css
@@ -1,10 +1,12 @@
 .profile input {
   background-color: white;
   border: 1px solid gray;
+  border-radius: 3px;
+  color: gray;
   font: inherit;
   width: 70%;
   margin-left: 1rem;
-  padding: 0.2rem;
+  padding: 0.3rem;
 }
 .profile label {
   width: 15%;
@@ -12,6 +14,7 @@
 .profile input:focus,
 textarea:focus {
   outline: none;
+  color: black;
 }
 .profile {
   width: 50%;
