--- a/test1/src/components/UI/LoadingSpinner.module.css
+++ b/test1/src/components/UI/LoadingSpinner.module.css
@@ -7,9 +7,8 @@
   /* height: 20rem; */
   width: 100%;
   display: flex;
-  margin-left : 10rem ; 
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
 }
 .spinner:after {
   content: " ";
